update for the app apk

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1>
       Descarca aplicatia <span class="accent">Fabrica de Stiinta</span> de aici
     </h1>
-    <a href="images/eduplay.apk" class="SimpleButton">
+    <a href="images/fabrica-de-stiinta.apk" class="SimpleButton">
       <div>
         <span>download</span>
         <span>download</span>
