--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&display=swap"
       rel="stylesheet"
     />
-    <title>EduPlay</title>
+    <title>Fabrica De Stiinta App</title>
   </head>
   <body>
     <h1>
